css was added, content was added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <h1>github</h1>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic at quibusdam eveniet sed nihil assumenda quo illum non,
+         delectus facere exercitationem inventore blanditiis sint magni labore facilis eligendi tempore error.</div>
+         <h2>nem</h2>
+         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quia recusandae aspernatur nihil aliquam explicabo voluptatibus, 
+            distinctio commodi voluptates asperiores dolore amet sit aperiam optio! Eligendi placeat quas soluta tempore.</div>
 </body>
 </html>
