--- a/index.html
+++ b/index.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./catalog.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>github</h1>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic at quibusdam eveniet sed nihil assumenda quo illum non,
-         delectus facere exercitationem inventore blanditiis sint magni labore facilis eligendi tempore error.</div>
-         <h2>nem</h2>
-         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quia recusandae aspernatur nihil aliquam explicabo voluptatibus, 
-            distinctio commodi voluptates asperiores dolore amet sit aperiam optio! Eligendi placeat quas soluta tempore.</div>
+    <div class="heroContiner">
+        <div class="heroTitle">Are you starving?</div>
+        <div class="heroTitle2">Within a few clicks, find meals that are accessible near you</div>
+        <div class="card">
+            <div class="top">
+                <div class="tab1">
+                    <div class="icon"> <img src="moto.png"></div>
+                    <div class="text">Delivery</div>
+                </div>
+                <div class="tab2">
+                    <div class="icon"></div>
+                    <div class="text"></div>
+                </div>
+            </div>
+            <div class="button"></div>
+        </div>
+    </div>
 </body>
 </html>
